testdata/baselines/reference/submodule/conformance/contextuallyTypedStringLiteralsInJsxAttributes02.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
file.tsx(16,55): error TS2503: Cannot find namespace 'JSX'.
file.tsx(17,51): error TS2503: Cannot find namespace 'JSX'.
file.tsx(18,61): error TS2503: Cannot find namespace 'JSX'.
file.tsx(32,55): error TS2503: Cannot find namespace 'JSX'.
file.tsx(35,52): error TS2503: Cannot find namespace 'JSX'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (6 errors) ====
    import React = require('react')
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    export interface ClickableProps {
        children?: string;
        className?: string;
    }
    
    export interface ButtonProps extends ClickableProps {
        onClick: (k: "left" | "right") => void;
    }
    
    export interface LinkProps extends ClickableProps {
        goTo: "home" | "contact";
    }
    
    export function MainButton(buttonProps: ButtonProps): JSX.Element;
                                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    export function MainButton(linkProps: LinkProps): JSX.Element;
                                                      ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    export function MainButton(props: ButtonProps | LinkProps): JSX.Element {
                                                                ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
        const linkProps = props as LinkProps;
        if(linkProps.goTo) {
            return this._buildMainLink(props);
        }
    
        return this._buildMainButton(props);
    }
    
    const b0 = <MainButton {...{onClick: (k) => {console.log(k)}}} extra />;  // k has type "left" | "right"
    const b2 = <MainButton onClick={(k)=>{console.log(k)}} extra />;  // k has type "left" | "right"
    const b3 = <MainButton {...{goTo:"home"}} extra />;  // goTo has type"home" | "contact"
    const b4 = <MainButton goTo="home" extra />;  // goTo has type "home" | "contact"
    
    export function NoOverload(buttonProps: ButtonProps): JSX.Element { return undefined }
                                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    const c1 = <NoOverload  {...{onClick: (k) => {console.log(k)}}} extra />;  // k has type any
    
    export function NoOverload1(linkProps: LinkProps): JSX.Element { return undefined }
                                                       ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    const d1 = <NoOverload1 {...{goTo:"home"}} extra  />;  // goTo has type "home" | "contact"
    